force-app/main/default/objects/Financing__c/Financing__c.object-meta.xml
<CustomObject>
    <label>Financing</label>
    <nameField>
        <label>Financing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>