force-app/main/default/objects/Financing__c/fields/DOT__c.field-meta.xml
<CustomField>
    <fullName>DOT__c</fullName>
    <formula>Lead__r.USDOT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOT</label>
    <type>Text</type>
</CustomField>