force-app/main/default/objects/Financing__c/fields/Down_payment__c.field-meta.xml
<CustomField>
    <fullName>Down_payment__c</fullName>
    <label>Down payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>