force-app/main/default/objects/Financing__c/fields/DP_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>DP_Per_Unit__c</fullName>
    <formula>Down_payment__c / Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DP Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>