force-app/main/default/objects/Financing__c/fields/Finance_Request__c.field-meta.xml
<CustomField>
    <fullName>Finance_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Request</label>
    <referenceTo>Finance_Request__c</referenceTo>
    <relationshipLabel>Financing</relationshipLabel>
    <relationshipName>Financing</relationshipName>
    <type>Lookup</type>
</CustomField>