force-app/main/default/objects/Financing__c/fields/Financial_Company__c.field-meta.xml
<CustomField>
    <fullName>Financial_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Company</label>
    <referenceTo>Financial_Company__c</referenceTo>
    <relationshipLabel>Financing</relationshipLabel>
    <relationshipName>Financing</relationshipName>
    <type>Lookup</type>
</CustomField>