force-app/main/default/objects/Financing__c/fields/MGA_Quote__c.field-meta.xml
<CustomField>
    <fullName>MGA_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MGA Quote</label>
    <referenceTo>MGA_Quote__c</referenceTo>
    <relationshipLabel>Financing</relationshipLabel>
    <relationshipName>Financing</relationshipName>
    <type>Lookup</type>
</CustomField>