force-app/main/default/objects/Financing__c/fields/MP_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>MP_Per_Unit__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Monthly_Payment__c)), 
    Monthly_Payment__c / Units__c, 
    ((Principal_Amount__c - Down_payment__c) / Installments__c) / Units__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MP Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>